Update favicons. Fix padding for works view.

--- a/resources/sass/app/layout/_works.scss
+++ b/resources/sass/app/layout/_works.scss
@@ -3,7 +3,7 @@
   width: auto;
   pointer-events: auto;
   margin: 0 0 2.5rem 2.5rem;
-  padding: 9vw 0;
+  padding: 9vh 0;
 
   &__img {
     @extend .slide__img;
