--- a/resources/sass/app/layout/_header.scss
+++ b/resources/sass/app/layout/_header.scss
@@ -17,9 +17,9 @@
     z-index: 1000;
     transform: translateX(-50%);
 
-    svg {
-      display: block;
-      margin: 0 auto;
+    img {
+      width: 98px;
+      height: 78px;
     }
   }
 }
